--- a/HMS.WPF/packages.config
+++ b/HMS.WPF/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net472" />
+  <package id="PresentationFramework" version="4.6.0" targetFramework="net472" />
   <package id="PropertyChanged.Fody" version="3.4.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net472" />
